[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-message-sanitize-py"
version = "0.1.0"
description = "Sanitize and normalize LLM message lists"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["llm", "agent", "messages", "sanitize", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/agent-message-sanitize-py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_message_sanitize = ["py.typed"]
